--- a/buy_confirm.html
+++ b/buy_confirm.html
@@ -17,22 +17,18 @@
       <tr>
         <th>SNo.</th><th>Наименование</th><th>Количество</th><th>Цена</th>
       </tr>
-    {% set cnt={'val':1} %}
-    {% for item in items %}
     <tr>
       <td>{{cnt['val']}}</td>
       <td>{{item[0]}}</td>
       <td>{{item[1]}}</td>
       <td>₹ {{item[2]}}</td>
     </tr>
-    {%if cnt.update({'val':(cnt['val']+1)}) %}{% endif %}
-    {% endfor %}
     </table>
     <table>
       <tr><th>ИТОГО :</th><th>₹ {{total}}</th></tr>
     </table>
-    <input type="submit" name="choice" value="PLACE ORDER" style="display:block; margin-left:auto; margin-right:auto; margin-top:1vw;">
-    <input type="submit" name="choice" value="CANCEL" style="display:block; margin-left:auto; margin-right:auto; margin-top:1vw;">
+    <input type="submit" name="choice" value="ПЕРЕЙТИ К ФОРМЕ ОПЛАТЫ" style="display:block; margin-left:auto; margin-right:auto; margin-top:1vw;">
+    <input type="submit" name="choice" value="ОТМЕНИТЬ" style="display:block; margin-left:auto; margin-right:auto; margin-top:1vw;">
   </form>
 </body>
 </html>
